--- a/style.css
+++ b/style.css
@@ -64,7 +64,13 @@ hr{
 }
 
 .logout{
-	margin-top: 75%;
+	position: absolute;
+	margin: 5% 37%;
+	bottom: 0;
+}
+
+.logout:hover{
+	color: #fff;
 }
 
 h3{
@@ -181,8 +187,18 @@ h4{
 
 .kantormainselect{
 	margin: 3px;
-	width: 10%;
+	width: 12.5%;
 	display: inline-block;
+	border-radius: 0;
+}
+
+.kantormainfiltersubmit{
+	display: inline-block;
+	border-radius: 0;
+	height: 35px;
+	background-color: #183A56;
+	color: #fff;
+	margin-left: 3px;
 }
 
 .kantormainselectkantor{
@@ -248,6 +264,10 @@ td{
 	background-color: #D45C00;
 	color: #fff;
 	padding-top: 6px;
+}
+
+.kantordaftarubah:hover{
+	color: #fff;
 }
 
 .kantordaftarhapus{
