--- a/style.css
+++ b/style.css
@@ -256,6 +256,16 @@ td{
 	vertical-align: middle !important;
 }
 
+.kantordaftartransfer{
+	width: 47%;
+	display: inline-block;
+	border-radius: 0;
+	height: 35px;
+	background-color: #183A56;
+	color: #fff;
+	padding-top: 6px;
+}
+
 .kantordaftarubah{
 	width: 47%;
 	display: inline-block;
@@ -349,4 +359,28 @@ td{
 	margin: 3px;
 	width: 20.5%;
 	display: inline-block;
+}
+
+.closingdetailedit{
+	width: 20%;
+	display: inline-block;
+	border-radius: 0;
+	height: 35px;
+	background-color: #D45C00;
+	color: #fff;
+	padding-top: 6px;
+}
+
+.closingdetailedit:hover{
+	color: #fff;
+}
+
+.closingdetaildelete{
+	width: 20%;
+	display: inline-block;
+	border-radius: 0;
+	height: 35px;
+	background-color: #D63438;
+	color: #fff;
+	padding-top: 6px;
 }
