agen detail kelar

--- a/style.css
+++ b/style.css
@@ -367,6 +367,12 @@ td{
 	color: #fff;
 }
 
+.tabelkiri{
+	width: 37.5%;
+	background-color: #183A56;
+	color: #fff;
+}
+
 /*************************************/
 
 .propertyselect{
